[gd_scene format=3 uid="uid://dx2wpf12h8yx8"]

[ext_resource type="Script" uid="uid://b7hfr01o60sgv" path="res://scripts/menu/main.gd" id="1_r8hr5"]
[ext_resource type="Texture2D" uid="uid://buex2mny3ug2e" path="res://assets/house.png" id="1_rrmte"]
[ext_resource type="Texture2D" uid="uid://gogdmuq8gyfj" path="res://assets/logo.png" id="2_omghv"]
[ext_resource type="PackedScene" uid="uid://co3g0lfeq0wt3" path="res://scenes/menu/transition.tscn" id="4_ynvfx"]

[node name="Main" type="Control" unique_id=112889743]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8hr5")

[node name="Background" type="TextureRect" parent="." unique_id=1698722829]
modulate = Color(0.45748308, 0.45748308, 0.45748308, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1024.0
offset_top = -640.0
offset_right = 1024.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rrmte")
stretch_mode = 3

[node name="Menu" type="VBoxContainer" parent="." unique_id=512028083]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -461.5
offset_top = -161.0
offset_right = 461.5
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="HBoxContainer" parent="Menu" unique_id=481067162]
layout_mode = 2

[node name="LogoMargin" type="MarginContainer" parent="Menu/TitleContainer" unique_id=566210692]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="Menu/TitleContainer/LogoMargin" unique_id=684169303]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_omghv")

[node name="TitleMargin" type="MarginContainer" parent="Menu/TitleContainer" unique_id=959842266]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Menu/TitleContainer/TitleMargin" unique_id=1992650439]
layout_mode = 2
theme_override_font_sizes/font_size = 144
text = "SuperCat"

[node name="PlayButton" type="Button" parent="Menu" unique_id=136313419]
layout_mode = 2
text = "Play
"

[node name="LevelContainer" type="VBoxContainer" parent="Menu" unique_id=1672329712]
visible = false
layout_mode = 2

[node name="ChooseLabel" type="Label" parent="Menu/LevelContainer" unique_id=1777526563]
layout_mode = 2
text = "Choose a level"
horizontal_alignment = 1

[node name="TreeButton" type="Button" parent="Menu/LevelContainer" unique_id=899698372]
layout_mode = 2
text = "Tree"

[node name="SuburbsButton" type="Button" parent="Menu/LevelContainer" unique_id=351056220]
layout_mode = 2
text = "Suburbs"

[node name="BuildingsButton" type="Button" parent="Menu/LevelContainer" unique_id=1723031544]
layout_mode = 2
text = "New York"

[node name="Transition" parent="." unique_id=2123586616 instance=ExtResource("4_ynvfx")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 205.0
offset_bottom = 196.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menu/LevelContainer/TreeButton" to="." method="_on_tree_button_pressed"]
[connection signal="pressed" from="Menu/LevelContainer/SuburbsButton" to="." method="_on_suburbs_button_pressed"]
[connection signal="pressed" from="Menu/LevelContainer/BuildingsButton" to="." method="_on_buildings_button_pressed"]
